--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vuepress/client": "2.0.0-beta.48",
     "@vuepress/plugin-docsearch": "2.0.0-beta.48",
     "axios": "^0.27.2",
+    "pnpm": "^8.6.10",
     "sass-loader": "13.0.0",
     "vue": "3.2.37",
     "vuepress-theme-hope": "2.0.0-beta.84",
