--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
           cache: pnpm
 
       - name: Install Deps
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
 
       - name: Build Blog
         env:
